# slopepy

./: .gitignore  LICENSE  pyproject.toml  pytest.ini
slopepy/: __init__.py  classification.py  contour.py  hillshade.py  smoothing.py  utils.py
slopepy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_classification.py  test_contour.py  test_hillshade.py  test_smoothing.py
tests/data/: small_dem.tif
