[project]
name = "slopepy"
version = "0.1.0"
description = "GPU-accelerated Digital Elevation Model (DEM) analysis tool for hillshade, slope analysis, geomorphology, and hydrology"
authors = [
    {name = "Lerry William", email = "lerryws.xyz@outlook.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "cupy-cuda11x>=10.0.0",        # GPU acceleration
    "numpy>=1.20.0",               # Array operations
    "rasterio>=1.2.0",             # DEM reading and reprojection
    "geopandas>=0.10.0",           # GeoPackage and GeoParquet output
    "shapely>=1.8.0",              # Geometry creation (LineString)
    "scipy>=1.7.0",                # Scientific computing (used in smoothing)
    "scikit-image>=0.19.0",        # Contour generation with skimage.measure
    "pyarrow>=10.0.0",
    "typing-extensions>=4.0.0"     # Type hints support
]

[project.urls]
"Homepage" = "https://github.com/wslerry/slopepy"
"Bug Tracker" = "https://github.com/wslerry/slopepy/issues"
"Documentation" = "https://slopepy.readthedocs.io/"

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",                 # Testing framework
    "black>=22.0",                 # Code formatting
    "flake8>=4.0",                 # Linting
    "isort>=5.0",                  # Import sorting
    "mypy>=0.9"                    # Static type checking
]
docs = [
    "sphinx>=4.0",                 # Documentation generation
    "sphinx-rtd-theme>=1.0"        # ReadTheDocs theme
]

[tool.setuptools]
packages = ["slopepy"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"